# MugGWAS

./: Dockerfile  LICENSE  MANIFEST.in  README.md  datasets.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: greet.yml  unit_test.yml  unit_test_and_lint.yml
MugGWAS/: __init__.py
MugGWAS/data/: Readme.md
MugGWAS/scripts/: compile_variants_by_gene.py  get_snps.py
MugGWAS/tutorials/: tutorial.ipynb
annovar/: README.md
data/: Readme.md  extract_small_data.py  gene_mutation_summary.txt  grazing_defense_trait.subset.txt  resistances.subset.txt  snps.snp.filtered.vcf
data/LE18_22/: LE18_22.gp.txt
data/annovar_files/: graz_LE.ND_100.avinput  graz_LE.ND_101.avinput.variant_function  graz_LE.ND_78.avinput.exonic_variant_function  graz_LE.ND_78.avinput.variant_function  graz_LE.ND_79.avinput  graz_LE.ND_79.avinput.variant_function  graz_LE.ND_80.avinput.variant_function  graz_LE.ND_83.avinput.variant_function  graz_LE.ND_84.avinput  graz_LE.ND_84.avinput.variant_function  graz_LE.ND_85.avinput  graz_LE.ND_86.avinput.exonic_variant_function  graz_LE.ND_89.avinput  graz_LE.ND_89.avinput.variant_function  graz_LE.ND_90.avinput.exonic_variant_function  graz_LE.ND_91.avinput.exonic_variant_function  graz_LE.ND_91.avinput.variant_function  graz_LE.ND_94.avinput  graz_LE.ND_95.avinput.variant_function  graz_LE.ND_97.avinput  graz_LE.ND_97.avinput.exonic_variant_function  graz_LE.ND_98.avinput.exonic_variant_function  graz_LE.ND_98.avinput.variant_function  graz_LE.ND_99.avinput.variant_function
design_documents/: WBS_documentation.md  datasets.md  design_document_specification  design_document_specification.md  software_requirement_specification.md
envs/: environmen.yaml  environment.yaml
scripts/: 1_compile_variants_by_gene.py  __init__.py  annotate_variants.py  compile_variants_by_gene.py  estimate_pop_structure.py  readme.md  run_unitig_pyseer.sh  tutorial.ipynb
src/: readme.md
src/archive/: __main__.py
src/muggwas/: __init__.py  (+4 more)
tests/: readme.md  test.gff  test_1_compile_variants_by_gene.py  test_1_compile_variants_by_genes.py
tutorials/: README.md  tutorial.ipynb
(+971 files in other folders)
