[build-system]
requires = ["setuptools>=65.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "MugGWAS"
version = "0.2.2"
description = "Mutated-gene Genome-Wide Association Study (MugGWAS): A pipeline for GWAS analysis using phylogeny and gene mutations from non-model organisms."
readme = "README.md"
authors = [{name = "Yucheng Marvin Lin", email = "lyucheng@umich.edu"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "pandas>=2.1.4",
    "biopython>=1.81",
    "gffutils>=0.13",
    "dendropy>=5.0.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

