[metadata]
name = muggwas
version = 0.2.3
description = Mutated-gene Genome-Wide Association Study (MugGWAS): A pipeline for GWAS analysis using phylogeny and gene mutations from non-model organisms.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yucheng Marvin Lin
author_email = lyucheng@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
include_package_data = true
install_requires =
    numpy>=1.23.0
    pandas>=2.1.4
    biopython>=1.81
    gffutils>=0.13
    dendropy>=5.0.6
    pysam>=0.23.0
    # pyseer is available on Bioconda. Install it manually:
    # conda install -c bioconda pyseer
    # ucsc-gff3togenepred is available on Bioconda. Install it manually:
    # conda install -c bioconda ucsc-gff3togenepred
python_requires = >=3.9
package_dir =
    = src
zip_safe = false

[options.packages.find]
where = src
include =
    muggwas
    muggwas.*